--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-spring.application.name=inventory-management
+spring.application.name=ecommerce
+spring.datasource.url=jdbc:h2:mem:testdb;NON_KEYWORDS=USER,ORDER
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=update
